// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataAccessReportsDetailsPanel /> renders DataAccessReports detailsPanel 1`] = `
<styled.div
  data-automation="dtPanelEntityDataAccessReports"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    open={true}
    text=" Users"
    userHasUpdatePermission={true}
  />
  <_class
    deleteSubEntity={[Function]}
    fields={Array []}
    items={
      Array [
        Object {
          "firstName": "mockFirstName",
          "id": "mockId",
          "lastName": "mockLastName",
          "name": "mockName",
          "status": "enabled",
        },
      ]
    }
    tableType="sidePanel"
    userHasUpdatePermission={true}
  />
</styled.div>
`;

exports[`<DataAccessReportsDetailsPanel /> renders DataAccessReports detailsPanel with no update permision 1`] = `
<styled.div
  data-automation="dtPanelEntityDataAccessReports"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    open={true}
    text=" Users"
    userHasUpdatePermission={false}
  />
  <_class
    deleteSubEntity={[Function]}
    fields={Array []}
    items={
      Array [
        Object {
          "firstName": "mockFirstName",
          "id": "mockId",
          "lastName": "mockLastName",
          "name": "mockName",
          "status": "enabled",
        },
      ]
    }
    tableType="sidePanel"
    userHasUpdatePermission={false}
  />
</styled.div>
`;
